--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Cardboard Example</title>
+    <title>poVRpoint</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <style>
@@ -9,7 +9,7 @@
         margin: 0px;
         overflow: hidden;
       }
-      #example {
+      #main {
         position: absolute;
         top: 0;
         left: 0;
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    <div id="example"></div>
+    <div id="main"></div>
 
   <script src="js/third-party/threejs/three.js"></script>
   <script src="js/third-party/threejs/StereoEffect.js"></script>
@@ -32,19 +32,22 @@
     var element, container;
 
     var clock = new THREE.Clock();
-
-    init();
+    var loader = new THREE.ObjectLoader();
+    loader.load("./scene.json", function(obj){
+      init(obj);
+    });
+    
     animate();
 
-    function init() {
+    function init(objScene) {
       renderer = new THREE.WebGLRenderer();
       element = renderer.domElement;
-      container = document.getElementById('example');
+      container = document.getElementById('main');
       container.appendChild(element);
 
       effect = new THREE.StereoEffect(renderer);
 
-      scene = new THREE.Scene();
+      scene = objScene;
 
       camera = new THREE.PerspectiveCamera(90, 1, 0.001, 700);
       camera.position.set(0, 10, 0);
@@ -78,28 +81,6 @@
 
       var light = new THREE.HemisphereLight(0x777777, 0x000000, 0.6);
       scene.add(light);
-
-      var texture = THREE.ImageUtils.loadTexture(
-        'textures/patterns/checker.png'
-      );
-      texture.wrapS = THREE.RepeatWrapping;
-      texture.wrapT = THREE.RepeatWrapping;
-      texture.repeat = new THREE.Vector2(50, 50);
-      texture.anisotropy = renderer.getMaxAnisotropy();
-
-      var material = new THREE.MeshPhongMaterial({
-        color: 0xffffff,
-        specular: 0xffffff,
-        shininess: 20,
-        shading: THREE.FlatShading,
-        map: texture
-      });
-
-      var geometry = new THREE.PlaneGeometry(1000, 1000);
-
-      var mesh = new THREE.Mesh(geometry, material);
-      mesh.rotation.x = -Math.PI / 2;
-      scene.add(mesh);
 
       window.addEventListener('resize', resize, false);
       setTimeout(resize, 1);
