--- a/index.html
+++ b/index.html
@@ -25,108 +25,112 @@
   <script src="js/third-party/threejs/StereoEffect.js"></script>
   <script src="js/third-party/threejs/DeviceOrientationControls.js"></script>
   <script src="js/third-party/threejs/OrbitControls.js"></script>
-
+  <script src="js/third-party/socket.io-1.4.5.js"></script>
   <script>
-    var camera, scene, renderer;
-    var effect, controls;
-    var element, container;
+    document.addEventListener('DOMContentLoaded', function(){ 
+      var camera, scene, renderer;
+      var effect, controls;
+      var element, container;
+      var clock = new THREE.Clock();
+      var loader = new THREE.ObjectLoader();
 
-    var clock = new THREE.Clock();
-    var loader = new THREE.ObjectLoader();
-    loader.load("./scene.json", function(obj){
-      init(obj);
-    });
-    
-    animate();
+      var socket = io('http://127.0.0.1:4000');
+      socket.on('scene_update', function (scene) {
+        var scene = loader.parse(scene);
+        init(scene);
+      });
 
-    function init(objScene) {
-      renderer = new THREE.WebGLRenderer();
-      element = renderer.domElement;
-      container = document.getElementById('main');
-      container.appendChild(element);
+      animate();
 
-      effect = new THREE.StereoEffect(renderer);
+      function init(objScene) {
+        console.log("on init", objScene);
+        renderer = new THREE.WebGLRenderer();
+        element = renderer.domElement;
+        container = document.getElementById('main');
+        container.appendChild(element);
 
-      scene = objScene;
+        effect = new THREE.StereoEffect(renderer);
 
-      camera = new THREE.PerspectiveCamera(90, 1, 0.001, 700);
-      camera.position.set(0, 10, 0);
-      scene.add(camera);
+        scene = objScene;
 
-      controls = new THREE.OrbitControls(camera, element);
-      controls.rotateUp(Math.PI / 4);
-      controls.target.set(
-        camera.position.x + 0.1,
-        camera.position.y,
-        camera.position.z
-      );
-      controls.noZoom = true;
-      controls.noPan = true;
+        camera = new THREE.PerspectiveCamera(15, 1, 1, 1000);
+        camera.position.set(0, 10, 0);
+        scene.add(camera);
 
-      function setOrientationControls(e) {
-        if (!e.alpha) {
-          return;
+        controls = new THREE.OrbitControls(camera, element);
+        controls.rotateUp(Math.PI / 4);
+        controls.target.set(
+          camera.position.x + 0.1,
+          camera.position.y,
+          camera.position.z
+        );
+        controls.noZoom = true;
+        controls.noPan = true;
+
+        function setOrientationControls(e) {
+          if (!e.alpha) {
+            return;
+          }
+
+          controls = new THREE.DeviceOrientationControls(camera, true);
+          controls.connect();
+          controls.update();
+
+          element.addEventListener('click', fullscreen, false);
+
+          window.removeEventListener('deviceorientation', setOrientationControls, true);
         }
 
-        controls = new THREE.DeviceOrientationControls(camera, true);
-        controls.connect();
-        controls.update();
+        window.addEventListener('deviceorientation', setOrientationControls, true);
 
-        element.addEventListener('click', fullscreen, false);
+        var light = new THREE.HemisphereLight(0x777777, 0x000000, 0.6);
+        scene.add(light);
 
-        window.removeEventListener('deviceorientation', setOrientationControls, true);
+        window.addEventListener('resize', resize, false);
+        
+        setTimeout(resize, 1);
       }
-      window.addEventListener('deviceorientation', setOrientationControls, true);
 
+      function resize() {
+        var width = container.offsetWidth;
+        var height = container.offsetHeight;
 
-      var light = new THREE.HemisphereLight(0x777777, 0x000000, 0.6);
-      scene.add(light);
+        camera.aspect = width / height;
+        camera.updateProjectionMatrix();
 
-      window.addEventListener('resize', resize, false);
-      setTimeout(resize, 1);
-    }
-
-    function resize() {
-      var width = container.offsetWidth;
-      var height = container.offsetHeight;
-
-      camera.aspect = width / height;
-      camera.updateProjectionMatrix();
-
-      renderer.setSize(width, height);
-      effect.setSize(width, height);
-    }
-
-    function update(dt) {
-      resize();
-
-      camera.updateProjectionMatrix();
-
-      controls.update(dt);
-    }
-
-    function render(dt) {
-      effect.render(scene, camera);
-    }
-
-    function animate(t) {
-      requestAnimationFrame(animate);
-
-      update(clock.getDelta());
-      render(clock.getDelta());
-    }
-
-    function fullscreen() {
-      if (container.requestFullscreen) {
-        container.requestFullscreen();
-      } else if (container.msRequestFullscreen) {
-        container.msRequestFullscreen();
-      } else if (container.mozRequestFullScreen) {
-        container.mozRequestFullScreen();
-      } else if (container.webkitRequestFullscreen) {
-        container.webkitRequestFullscreen();
+        renderer.setSize(width, height);
+        effect.setSize(width, height);
       }
-    }
+
+      function update(dt) {
+        resize();
+        camera.updateProjectionMatrix();
+        controls.update(dt);
+      }
+
+      function render(dt) {
+        effect.render(scene, camera);
+      }
+
+      function animate(t) {
+        requestAnimationFrame(animate);
+
+        update(clock.getDelta());
+        render(clock.getDelta());
+      }
+
+      function fullscreen() {
+        if (container.requestFullscreen) {
+          container.requestFullscreen();
+        } else if (container.msRequestFullscreen) {
+          container.msRequestFullscreen();
+        } else if (container.mozRequestFullScreen) {
+          container.mozRequestFullScreen();
+        } else if (container.webkitRequestFullscreen) {
+          container.webkitRequestFullscreen();
+        }
+      }
+    }, false);
   </script>
   </body>
 </html>
